[project]
name = "aegnix-abi"
version = "0.5.0"
license = "MIT"
description = "AEGNIX Agent Bridge Interface SDK (Secure Runtime Admission, Policy, and Transport Layer)"
authors = [{ name = "Invictus Insights R&D" }]
requires-python = ">=3.10"

dependencies = [
    "cryptography>=42.0.0",
    "google-cloud-pubsub>=2.20.0",
    "PyYAML>=6.0",
    "typing_extensions>=4.0",
    "aegnix-core"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aegnix_abi"]
